samples/_failures_safe/1761452008_74799d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_164daafb.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_164daafb.c:157:12: error: missing terminating " character
  157 |     printf("Shortest distance from %d to %d:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_164daafb.c:157:5: error: expected expression at end of input
  157 |     printf("Shortest distance from %d to %d:
      |     ^~~~~~
./samples/SAFE/__tmp_164daafb.c:157:5: error: expected declaration or statement at end of input
